--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -29,7 +29,17 @@
 
     <dependencyManagement>
         <dependencies>
-             <dependency>
+            <dependency>
+                <groupId>org.mariadb.jdbc</groupId>
+                <artifactId>mariadb-java-client</artifactId>
+                <version>${jdbc.mariadb-java-client.varsion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.microsoft.sqlserver</groupId>
+                <artifactId>mssql-jdbc</artifactId>
+                <version>${jdbc.mssql.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.mysql</groupId>
                 <artifactId>mysql-connector-j</artifactId>
                 <version>${jdbc.mysql.version}</version>
