--- a/datamigrator-archetype/pom.xml
+++ b/datamigrator-archetype/pom.xml
@@ -9,12 +9,24 @@
     </parent>
 
   <groupId>net.osgiliath.datamigrator.archetype</groupId>
-  <artifactId>archetype</artifactId>
+  <artifactId>datamigrator-archetype</artifactId>
   <packaging>maven-archetype</packaging>
 
   <name>datamigrator-archetype</name>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+            <include>archetype-resources/pom.xml</include>
+        </includes>
+      </resource>
+    </resources>
     <extensions>
       <extension>
         <groupId>org.apache.maven.archetype</groupId>
@@ -25,6 +37,13 @@
 
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <configuration>
+            <escapeString>\</escapeString>
+          </configuration>
+        </plugin>
         <plugin>
           <artifactId>maven-archetype-plugin</artifactId>
           <version>3.2.1</version>
