--- a/sample-mono/src/main/resources/application.yml
+++ b/sample-mono/src/main/resources/application.yml
@@ -1,24 +1,31 @@
 data-migrator:
   model-base-package: @jpa.domain.package@
   sequence:
-#    - rows-minimize-1
-#    - column-anonymize-1
-#    - column-anonymize-2
+    #    - rows-minimize-1
+    #    - column-anonymize-1
+    #    - column-anonymize-2
     - anonymizer-custom-1
   sequencers:
-#    - name: rows-minimize-1
-#      type: rows-minimize
-#      rows-to-keep: 10
-#    - name: column-anonymize-1
-#      type: column-anonymizers
-#      table: virtuals
-#      column: password
-#      faker: RockBand
-#    - name: column-anonymize-2
-#      type: column-anonymizers
-#      table: virtuals
-#      column: biosspass
-#      faker: Disease
+    #    - name: rows-minimize-1
+    #      type: rows-minimize
+    #      rows-to-keep: 10
+    #    - name: column-anonymize-1
+    #      type: column-anonymizers
+    #      table: virtuals
+    #      column: password
+    #      faker: RockBand
+    #    - name: column-anonymize-2
+    #      type: column-anonymizers
+    #      table: virtuals
+    #      column: biosspass
+    #      faker: Disease
+    #    - name: column-anonymize-1
+    #      type: factory
+    #      column-transformation-definitions:
+    #        - column-name: firstName
+    #          options:
+    #            - faker-class: net.datafaker.providers.entertainment.Dragonball
+    #              faker-function: character # https://www.datafaker.net/documentation/getting-started/ for options, will default to a dragonball character if not set
 
     - name: anonymizer-custom-1
       type: bean
@@ -48,10 +55,10 @@ spring:
     properties:
       hibernate:
         id.new_generator_mappings: true
-#        cache:
-#          use_second_level_cache: true
-#          use_query_cache: false
-#          region.factory_class: jcache
+        #        cache:
+        #          use_second_level_cache: true
+        #          use_query_cache: false
+        #          region.factory_class: jcache
         generate_statistics: false
         # modify batch size as necessary
         jdbc:
