--- a/sample-mono/src/test/resources/application.yml
+++ b/sample-mono/src/test/resources/application.yml
@@ -6,25 +6,28 @@ data-migrator:
     - column-anonymize-2
     - anonymizer-custom-1
   sequencers:
-#    - name: rows-minimize-1
-#      type: rows-minimize
-#      rows-to-keep: 10
-#    - name: column-anonymize-1
-#      type: column-anonymizers
-#      table: virtuals
-#      column: password
-#      faker: RockBand
-#    - name: column-anonymize-2
-#      type: column-anonymizers
-#      table: virtuals
-#      column: biosspass
-#      faker: Disease
+    #    - name: rows-minimize-1
+    #      type: rows-minimize
+    #      rows-to-keep: 10
+    #    - name: column-anonymize-1
+    #      type: column-anonymizers
+    #      table: virtuals
+    #      column: password
+    #      faker: RockBand
+    #    - name: column-anonymize-2
+    #      type: column-anonymizers
+    #      table: virtuals
+    #      column: biosspass
+    #      faker: Disease
     - name: column-anonymize-1
       type: factory
       transformer-class: net.osgiliath.migrator.modules.faker.ColumnFaker
       entity-class: Employee
-      columns:
-       - firstName
+      column-transformation-definitions:
+        - column-name: firstName
+          options:
+            - faker-class: net.datafaker.providers.entertainment.Dragonball
+              faker-function: character # https://www.datafaker.net/documentation/getting-started/ for options, will default to a dragonball character if not set
 
     - name: anonymizer-custom-1
       type: bean
@@ -58,9 +61,9 @@ spring:
       hibernate:
         id.new_generator_mappings: true
         #        cache:
-#          use_second_level_cache: true
-#          use_query_cache: false
-#          region.factory_class: jcache
+        #          use_second_level_cache: true
+        #          use_query_cache: false
+        #          region.factory_class: jcache
         generate_statistics: false
         # modify batch size as necessary
         jdbc:
