--- a/sample-mono/src/test/resources/application.yml
+++ b/sample-mono/src/test/resources/application.yml
@@ -26,9 +26,7 @@ data-migrator:
       column-transformation-definitions:
         - column-name: firstName
           options:
-            - faker-class: net.datafaker.providers.entertainment.Dragonball
-              faker-function: character # https://www.datafaker.net/documentation/getting-started/ for options, will default to a dragonball character if not set
-
+            - faker: dragon_ball.characters
     - name: anonymizer-custom-1
       type: bean
       transformer-class: net.osgiliath.migrator.sample.transformers.CountryTransformer
