--- a/sample-mono/pom.xml
+++ b/sample-mono/pom.xml
@@ -12,7 +12,7 @@
     <groupId>net.osgiliath.datamigrator.sample</groupId>
     <artifactId>sample-mono</artifactId>
     <properties>
-        <data-migrator.version>1.16-SNAPSHOT</data-migrator.version>
+        <data-migrator.version>${project.version}</data-migrator.version>
         <!-- End test configuration-->
         <jpa.domain.package>${project.groupId}.domain</jpa.domain.package>
     </properties>
