--- a/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
@@ -2,39 +2,39 @@
 #source.database.driver = org.postgresql.Driver
 #source.database.driver = org.mariadb.jdbc.Driver
 #source.database.driver = oracle.jdbc.OracleDriver
-source.database.driver = com.mysql.cj.jdbc.Driver
+source.database.driver=com.mysql.cj.jdbc.Driver
 # TODO sample and libraries to import for sqlserver and oracle
-source.database.port = 3306
+source.database.port=3306
 #source.database.port = 5432
-source.database.baseurl = jdbc:mysql://127.0.0.1:${source.database.port}
+source.database.baseurl=jdbc:mysql://127.0.0.1:${source.database.port}
 #source.database.baseurl = jdbc:h2:file:${project.build.directory}/h2db/db/pmi
 #source.database.baseurl = jdbc:postgresql://127.0.0.1:${source.database.port}/database
-source.database.options = zeroDateTimeBehavior=convertToNull
-source.database.url = ${source.database.baseurl}?${source.database.options}
-source.datasource.defaultSchemaName = test
-source.datasource.username = test
-source.datasource.password = test
+source.database.options=zeroDateTimeBehavior=convertToNull
+source.database.url=${source.database.baseurl}?${source.database.options}
+source.datasource.defaultSchemaName=test
+source.datasource.username=test
+source.datasource.password=test
 #source.jdbc.dialect = org.hibernate.dialect.H2Dialect
 #source.jdbc.dialect = org.hibernate.dialect.FixedPostgreSQL10Dialect
-#source.jdbc.dialect = org.hibernate.dialect.Oracle12cDialect
+#source.jdbc.dialect = org.hibernate.dialect.OracleDialect
 #source.jdbc.dialect = org.hibernate.dialect.SQLServer2012Dialect
-source.jdbc.dialect = org.hibernate.dialect.MySQLDialect
+source.jdbc.dialect=org.hibernate.dialect.MySQLDialect
 #target.database.driver = org.h2.Driver
 #target.database.driver = org.postgresql.Driver
 #target.database.driver = org.mariadb.jdbc.Driver
 #target.database.driver = oracle.jdbc.OracleDriver
-target.database.driver = com.mysql.cj.jdbc.Driver
+target.database.driver=com.mysql.cj.jdbc.Driver
 #target.database.url = jdbc:h2:file:${project.build.directory}/h2db/db/pmi
 #target.database.url = jdbc:postgresql://localhost:5432/database
 #target.database.url = jdbc:mysql://localhost:3306/test?serverTimezone=UTC
-target.database.baseurl = jdbc:mysql://localhost:65108
-target.database.options = zeroDateTimeBehavior=convertToNull
-target.database.url = ${target.database.baseurl}?${target.database.options}
-target.datasource.defaultSchemaName = test
-target.datasource.username = test
-target.datasource.password = test
+target.database.baseurl=jdbc:mysql://localhost:65108
+target.database.options=zeroDateTimeBehavior=convertToNull
+target.database.url=${target.database.baseurl}?${target.database.options}
+target.datasource.defaultSchemaName=test
+target.datasource.username=test
+target.datasource.password=test
 #target.jdbc.dialect = org.hibernate.dialect.H2Dialect
 #target.jdbc.dialect = org.hibernate.dialect.FixedPostgreSQL10Dialect
-#target.jdbc.dialect = org.hibernate.dialect.Oracle12cDialect
+#target.jdbc.dialect = org.hibernate.dialect.OracleDialect
 #target.jdbc.dialect = org.hibernate.dialect.SQLServer2012Dialect
-target.jdbc.dialect = org.hibernate.dialect.MySQLDialect
+target.jdbc.dialect=org.hibernate.dialect.MySQLDialect
