classloader trick to load eneities

--- a/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/database.properties
@@ -10,8 +10,8 @@ source.database.baseurl=jdbc:mysql://127.0.0.1:${source.database.port}
 #source.database.baseurl = jdbc:h2:file:${project.build.directory}/h2db/db/pmi
 #source.database.baseurl = jdbc:postgresql://127.0.0.1:${source.database.port}/database
 source.database.options=zeroDateTimeBehavior=convertToNull
-source.database.url=${source.database.baseurl}?${source.database.options}
 source.datasource.defaultSchemaName=test
+source.database.url=${source.database.baseurl}/${source.datasource.defaultSchemaName}?${source.database.options}
 source.datasource.username=test
 source.datasource.password=test
 #source.jdbc.dialect = org.hibernate.dialect.H2Dialect
@@ -29,8 +29,8 @@ target.database.driver=com.mysql.cj.jdbc.Driver
 #target.database.url = jdbc:mysql://localhost:3306/test?serverTimezone=UTC
 target.database.baseurl=jdbc:mysql://localhost:65108
 target.database.options=zeroDateTimeBehavior=convertToNull
-target.database.url=${target.database.baseurl}?${target.database.options}
 target.datasource.defaultSchemaName=test
+target.database.url=${target.database.baseurl}/${target.datasource.defaultSchemaName}?${target.database.options}
 target.datasource.username=test
 target.datasource.password=test
 #target.jdbc.dialect = org.hibernate.dialect.H2Dialect
