--- a/sample-mono/src/main/resources/hibernate.properties
+++ b/sample-mono/src/main/resources/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.connection.driver_class = @source.database.driver@
-hibernate.connection.url = @source.database.url@
+hibernate.connection.url = @source.database.baseurl@
 hibernate.connection.username = @source.datasource.username@
 hibernate.connection.password = @source.datasource.password@
 hibernate.default_schema = @source.datasource.defaultSchemaName@
