--- a/datamigrator-archetype/src/main/resources/archetype-resources/src/main/resources/hibernate.properties
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/src/main/resources/hibernate.properties
@@ -1,7 +1,7 @@
-hibernate.connection.driver_class = @source.database.driver@
-hibernate.connection.url = @source.database.url@
-hibernate.connection.username = @source.datasource.username@
-hibernate.connection.password = @source.datasource.password@
-hibernate.default_schema = @source.datasource.defaultSchemaName@
-hibernate.default_catalog = @source.datasource.defaultSchemaName@
-hibernate.dialect = @source.jdbc.dialect@
+hibernate.connection.driver_class=@source.database.driver@
+hibernate.connection.url=@source.database.baseurl@
+hibernate.connection.username=@source.datasource.username@
+hibernate.connection.password=@source.datasource.password@
+hibernate.default_schema=@source.datasource.defaultSchemaName@
+hibernate.default_catalog=@source.datasource.defaultSchemaName@
+hibernate.dialect=@source.jdbc.dialect@
