--- a/sample-mono/src/main/resources/application.yml
+++ b/sample-mono/src/main/resources/application.yml
@@ -78,7 +78,7 @@ spring:
   datasource:
     source:
       type: com.zaxxer.hikari.HikariDataSource
-      url: @source.database.baseurl@/@source.datasource.defaultSchemaName@?@source.database.options@
+      url: @source.database.url@
       username: @source.datasource.username@
       password: @source.datasource.password@
       hikari:
@@ -86,7 +86,7 @@ spring:
         auto-commit: false
     sink:
       type: com.zaxxer.hikari.HikariDataSource
-      url: @target.database.baseurl@/@target.datasource.defaultSchemaName@?@target.database.options@
+      url: @target.database.url@
       username: @target.datasource.username@
       password: @target.datasource.password@
       hikari:
